# nara-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/ai-worker/: .env.example  pyproject.toml
apps/ai-worker/nara_worker/: __init__.py  config.py  db.py  models.py  worker.py
apps/ai-worker/nara_worker/clients/: __init__.py  groq.py  openai.py
apps/ai-worker/nara_worker/jobs/: __init__.py  detect_patterns.py  evaluate_nudges.py  process_entry.py  reprocess_note.py  sweeper.py  weekly_letter.py
apps/ai-worker/nara_worker/pipeline/: embedding.py  extraction.py  persistence.py
apps/ai-worker/nara_worker/prompts/: __init__.py  ask_nara.py  extraction.py  weekly_letter.py
apps/ai-worker/nara_worker/rag/: ask_nara.py
apps/ai-worker/nara_worker/telemetry/: __init__.py  callback.py  ledger.py  pricing.py
apps/ai-worker/tests/: test_clients.py  test_integration_smoke.py
apps/ai-worker/tests/jobs/: test_detect_patterns.py  test_evaluate_nudges.py  test_process_entry.py  test_reprocess_note.py  test_weekly_letter.py
apps/ai-worker/tests/pipeline/: test_embedding.py  test_extraction.py  test_persistence.py
apps/ai-worker/tests/rag/: test_ask_nara.py
apps/ai-worker/tests/telemetry/: test_pricing.py
apps/api/: package.json  tsconfig.json
apps/mobile/: app.json  package-lock.json  package.json  tsconfig.json
docs/: API_CONTRACT.md  ARCHITECTURE.md  CLAUDE_BACKEND.md  CLAUDE_FRONTEND.md  DATABASE_SCHEMA.md  OBSERVABILITY.md  TURGON_AI_PREP.md
docs/DECISIONS/: ADR-001-database-and-platform.md  (+2 more)
(+90 files in other folders)
